// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectHeaderThemeList /> should render correctly 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <a
    className="sc-bcXGCL iexBAt ProjectHeaderThemeList__ThemesButton-htGplC jeqUVz p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="sc-bcXGCL sc-oZHua dAVXJr hQQZty cap-icon"
      fill="none"
      height="1em"
      viewBox="0 0 12 10"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M11 3.182c0-.402-.344-.727-.77-.727h-5L4.309 1.29A.79.79 0 0 0 3.692 1H1.77C1.344 1 1 1.326 1 1.727v6.546c0 .401.344.727.77.727h8.46c.426 0 .77-.326.77-.727z"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    <p
      className="sc-bcXGCL ZhXEL cap-text platform__body"
      title="Immobilier "
    >
      Immobilier
       
      and-count-other-themes {"count":3}
    </p>
  </a>,
  <div
    ariaLabel="theme_list"
    baseId="theme-modal"
    data-testid="Modal"
    onClose={[Function]}
    show={false}
  >
    <div
      data-testid="Header"
    >
      count-themes {"count":4}
    </div>
    <div
      data-testid="Body"
    >
      <ul
        className="ListGroupFlush__Container-eGHZgt cEkgdF list-group-flush list-group"
        striped={false}
      >
        <li
          className="list-group-item"
        >
          <a
            href="https://capco.dev/themes/immobilier?_locale=fr-FR"
          >
            Immobilier
          </a>
        </li>
        <li
          className="list-group-item"
        >
          <a
            href="https://capco.dev/themes/justice?_locale=fr-FR"
          >
            Justice
          </a>
        </li>
        <li
          className="list-group-item"
        >
          <a
            href="https://capco.dev/themes/transport?_locale=fr-FR"
          >
            Transport
          </a>
        </li>
        <li
          className="list-group-item"
        >
          <a
            href="https://capco.dev/themes/theme-vide?_locale=fr-FR"
          >
            Thème vide
          </a>
        </li>
      </ul>
    </div>
    <div
      data-testid="Footer"
    >
      <button
        className="sc-bcXGCL sc-gGvGpy iaJbua jrAhSN cap-button"
        onClick={[Function]}
        type="button"
      >
        global.close
      </button>
    </div>
  </div>,
]
`;

exports[`<ProjectHeaderThemeList /> should render correctly when project is archived 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <a
    className="sc-bcXGCL iexBAt ProjectHeaderThemeList__ThemesButton-htGplC jXlMOP p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="sc-bcXGCL sc-oZHua dAVXJr hQQZty cap-icon"
      fill="none"
      height="1em"
      viewBox="0 0 12 10"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M11 3.182c0-.402-.344-.727-.77-.727h-5L4.309 1.29A.79.79 0 0 0 3.692 1H1.77C1.344 1 1 1.326 1 1.727v6.546c0 .401.344.727.77.727h8.46c.426 0 .77-.326.77-.727z"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    <p
      className="sc-bcXGCL ZhXEL cap-text platform__body"
      title="Immobilier "
    >
      Immobilier
       
      and-count-other-themes {"count":3}
    </p>
  </a>,
  <div
    ariaLabel="theme_list"
    baseId="theme-modal"
    data-testid="Modal"
    onClose={[Function]}
    show={false}
  >
    <div
      data-testid="Header"
    >
      count-themes {"count":4}
    </div>
    <div
      data-testid="Body"
    >
      <ul
        className="ListGroupFlush__Container-eGHZgt cEkgdF list-group-flush list-group"
        striped={false}
      >
        <li
          className="list-group-item"
        >
          <a
            href="https://capco.dev/themes/immobilier?_locale=fr-FR"
          >
            Immobilier
          </a>
        </li>
        <li
          className="list-group-item"
        >
          <a
            href="https://capco.dev/themes/justice?_locale=fr-FR"
          >
            Justice
          </a>
        </li>
        <li
          className="list-group-item"
        >
          <a
            href="https://capco.dev/themes/transport?_locale=fr-FR"
          >
            Transport
          </a>
        </li>
        <li
          className="list-group-item"
        >
          <a
            href="https://capco.dev/themes/theme-vide?_locale=fr-FR"
          >
            Thème vide
          </a>
        </li>
      </ul>
    </div>
    <div
      data-testid="Footer"
    >
      <button
        className="sc-bcXGCL sc-gGvGpy iaJbua jrAhSN cap-button"
        onClick={[Function]}
        type="button"
      >
        global.close
      </button>
    </div>
  </div>,
]
`;

exports[`<ProjectHeaderThemeList /> should render correctly with the display of modal 1`] = `
Array [
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <a
    className="sc-bcXGCL iexBAt ProjectHeaderThemeList__ThemesButton-htGplC jeqUVz p-0 data-districts__modal-link"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="sc-bcXGCL sc-oZHua dAVXJr hQQZty cap-icon"
      fill="none"
      height="1em"
      viewBox="0 0 12 10"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M11 3.182c0-.402-.344-.727-.77-.727h-5L4.309 1.29A.79.79 0 0 0 3.692 1H1.77C1.344 1 1 1.326 1 1.727v6.546c0 .401.344.727.77.727h8.46c.426 0 .77-.326.77-.727z"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={0.8}
      />
    </svg>
    <p
      className="sc-bcXGCL ZhXEL cap-text platform__body"
      title="Immobilier "
    >
      Immobilier
       
      and-count-other-themes {"count":3}
    </p>
  </a>,
  <div
    ariaLabel="theme_list"
    baseId="theme-modal"
    data-testid="Modal"
    onClose={[Function]}
    show={true}
  >
    <div
      data-testid="Header"
    >
      count-themes {"count":4}
    </div>
    <div
      data-testid="Body"
    >
      <ul
        className="ListGroupFlush__Container-eGHZgt cEkgdF list-group-flush list-group"
        striped={false}
      >
        <li
          className="list-group-item"
        >
          <a
            href="https://capco.dev/themes/immobilier?_locale=fr-FR"
          >
            Immobilier
          </a>
        </li>
        <li
          className="list-group-item"
        >
          <a
            href="https://capco.dev/themes/justice?_locale=fr-FR"
          >
            Justice
          </a>
        </li>
        <li
          className="list-group-item"
        >
          <a
            href="https://capco.dev/themes/transport?_locale=fr-FR"
          >
            Transport
          </a>
        </li>
        <li
          className="list-group-item"
        >
          <a
            href="https://capco.dev/themes/theme-vide?_locale=fr-FR"
          >
            Thème vide
          </a>
        </li>
      </ul>
    </div>
    <div
      data-testid="Footer"
    >
      <button
        className="sc-bcXGCL sc-gGvGpy iaJbua jrAhSN cap-button"
        onClick={[Function]}
        type="button"
      >
        global.close
      </button>
    </div>
  </div>,
]
`;
